src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__server_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.server.lua
  relevant_paths:
    - /foo.server.lua
    - /foo.meta.json
  context: {}
name: foo
class_name: Script
properties:
  Source:
    String: Hello there!
children: []

